--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/dompurify": "^2.4.0",
+    "@types/html-escaper": "^3.0.0",
     "@types/jsdom": "^20.0.1",
     "@types/marked": "^4.0.8",
     "@types/node": "^18.11.12",
@@ -38,8 +40,11 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.9.0",
     "@vueuse/head": "^1.0.22",
+    "dompurify": "^2.4.1",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "highlight.js": "^11.7.0",
+    "html-escaper": "^3.0.3",
     "jsdom": "^20.0.3",
     "marked": "^4.2.5",
     "naive-ui": "^2.34.3",
