--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.57.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
