--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.0",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
   }
