--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "tldr.inbrowser.app",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run download:tldr-pages && run-p type-check build-only",
+    "build": "npm run download:tldr-pages && npm run build:sitemap && run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "download:tldr-pages": "wget -O public/tldr-pages.zip https://github.com/tldr-pages/tldr/archive/refs/heads/main.zip"
+    "download:tldr-pages": "wget -O public/tldr-pages.zip https://github.com/tldr-pages/tldr/archive/refs/heads/main.zip",
+    "build:sitemap": "node scripts/build-sitemap.js"
   },
   "dependencies": {
     "@zip.js/zip.js": "^2.6.61",
@@ -41,6 +43,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
+    "jszip": "^3.10.1",
     "marked": "^4.2.5",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
