--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.1",
+    "@types/langmap": "^0.0.1",
     "@types/marked": "^4.0.8",
     "@types/node": "^18.11.12",
     "@vicons/antd": "^0.12.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
     "jszip": "^3.10.1",
+    "langmap": "^0.0.16",
     "marked": "^4.2.5",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
