--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.9.0",
     "@vueuse/head": "^1.0.22",
+    "@vueuse/router": "^9.10.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
