--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
+    "user-agent-data-types": "^0.3.0",
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.0",
     "vitest": "^0.25.6",
