--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typescript": "~4.7.4",
     "user-agent-data-types": "^0.3.0",
     "vite": "^4.0.0",
+    "vite-plugin-inject-preload": "^1.2.0",
     "vite-plugin-pwa": "^0.14.0",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
