--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.0",
     "vitest": "^0.25.6",
+    "vue-gtag": "^2.0.1",
     "vue-tsc": "^1.0.12"
   }
 }
