--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-        cache: 'npm'
+        cache: 'pnpm'
     - uses: pnpm/action-setup@v2
       with:
         version: 8
