--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 16.x
+    - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16.x
-        cache: 'pnpm'
+        node-version: 16
+
     - uses: pnpm/action-setup@v2
+      name: Install pnpm
       with:
         version: 8
-        run_install: true
+        run_install: false
+
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
+
+    - name: Install dependencies
+      run: pnpm install
     - run: pnpm ci
     - run: pnpm run build
     - uses: actions/upload-artifact@v3
